--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,85 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.border-high  {
+  border-top: 2px solid;
+}
+
+header {
+  max-height: 120px;
+  padding: 15px;
+  border-bottom: 2px solid;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+
+header .menu-burger-checkbox {
+  display: none;
+}
+
+.menu-burger-checkbox:checked ~ .menu-burger .line-high {
+
+  transform: translate(0px, 14px) rotate(45deg);
+}
+
+.menu-burger-checkbox:checked ~ .menu-burger .line-middle {
+	 opacity: 0;
+}
+
+.menu-burger-checkbox:checked ~ .menu-burger .line-low {
+	transform: translate(0px, -14px) rotate(-45deg);
+}
+
+header .circle {
+  width: 100px;
+  height: 100px;
+  background: white;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+header .circle .line {
+  width: 50px;
+  height: 4px;
+  margin: 5px 0;
+  border-radius: 10px;
+  background: black;
+  transition: 0.4s;
+}
+
+nav {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: red;
+  overflow: hidde;
+  left: 0;
+  top: 100%;
+  transition: all ease-in-out 1s 0.1s;
+}
+
+nav ul {
+  width: 375px;
+  margin: auto;
+  padding: 150px 10px 10px 10px ;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+nav li {
+  padding: 40px;
+  list-style: none;
+  border-bottom: 2px solid;
+  text-align: center;
+}
+
+.menu-burger-checkbox:checked ~ nav {
+  top: 0;
+}
