--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   max-width: 375px;
   margin: auto;
   background: #F9E9DE;
-  overflow: hidden;
 }
 
 img {
@@ -22,6 +25,31 @@ input {
   display: none;
 }
 
+.more-content {
+  display: block;
+  height: 20px;
+  overflow: hidden;
+  transition: all 1s;
+  -webkit-mask-image: linear-gradient(#F9E9DE, transparent);
+}
+
+label {
+  padding: 5px 20px;
+  background: white;
+  border-radius: 20px;
+}
+
+.container-carousel {
+  overflow: hidden;
+}
+
+.carousel {
+  display: flex;
+  flex-flow: row nowrap;
+  animation: carousel 10s infinite;
+  position: relative;
+}
+
 header {
   max-height: 120px;
   padding: 15px;
@@ -29,6 +57,7 @@ header {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
+  box-sizing: content-box;
 }
 
 .menu-burger-checkbox:checked ~ .menu-burger .line-high {
@@ -53,7 +82,7 @@ header .circle {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 2;
 }
 
 header .circle .line {
@@ -68,19 +97,18 @@ header .circle .line {
 nav {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   background: red;
-  overflow: hidden;
   left: 0;
   top: 100%;
   transition: all ease-in-out 1s 0.1s;
+  z-index: 1;
 }
 
 nav ul {
   width: 375px;
   margin: auto;
   padding: 150px 10px 10px 10px ;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
 }
@@ -97,44 +125,29 @@ nav li {
 }
 
 main {
-  padding: 0 10px;
+  padding: 40px 10px;
 }
 
-.street-jam-festival {
+.street-jam-festival,
+.tags-graffiti-street-art {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.more-content {
-  display: block;
-  height: 0;
-  overflow: hidden;
-  transition: all 1s;
-}
-
-#afficher-plus-checkbox:checked ~ .more-content {
+.more-checkbox-street-jam-festival:checked ~ .more-content-street-jam-festival {
   height: 148px;
+  -webkit-mask-image: none;
 }
 
-.street-jam-festival label {
-  padding: 5px 20px;
-  background: white;
-  border-radius: 20px;
-}
-
-.tags-graffiti-street-art {
-  padding: ;
-}
-
-.tags-graffiti-street-art ul {
+.hourly {
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.tags-graffiti-street-art li {
+li {
   width: 100%;
   height: 90px;
   padding: 20px;
@@ -145,18 +158,31 @@ main {
   align-items: center;
 }
 
-.tags-graffiti-street-art .hours {
-  vertical-align: middle;
-}
-
-.tags-graffiti-street-art p {
+.hourly p {
   margin: 0;
   padding: 0;
   width: 50%;
 }
 
+.more-checkbox-tags:checked ~ .more-content-tags {
+  height: 148px;
+  -webkit-mask-image: none;
+}
+
+.more-checkbox-skate:checked ~ .more-content-skate {
+  height: 1000px;
+  -webkit-mask-image: none;
+}
 
 
-.skate {
-
+@keyframes carousel {
+  0%, 20% {
+    transform: translateX(0);
+  }
+  30%, 50%{
+    transform: translateX(-355px);
+  }
+  60%, 80%{
+    transform: translateX(-710px);
+  }
 }
