--- a/css/styles.css
+++ b/css/styles.css
@@ -14,94 +14,17 @@ img {
   max-width: 100%;
 }
 
-h1,
-h2,
-h3 {
-  font-family: 'Barlow Condensed', sans-serif;
-}
-
-.border-high  {
-  border-top: 2px solid;
-}
-
-p {
-  padding: 0 20px;
-}
-
 input {
   display: none;
 }
 
-.more-content {
-  display: block;
-  height: 20px;
-  overflow: hidden;
-  transition: all 1s;
-  -webkit-mask-image: linear-gradient(#F9E9DE, transparent);
-}
-
-.btn-more {
-  padding: 5px 20px;
-  background: white;
-  border-radius: 20px;
-}
-
-.container-carousel {
-  overflow: hidden;
-}
-
-.carousel {
-  display: flex;
-  flex-flow: row nowrap;
-  animation: carousel 10s infinite;
-  position: relative;
-}
-
-.hourly {
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-li {
-  width: 100%;
-  min-height: 95px;
-  padding: 20px;
-  border-bottom: 2px solid;
-  list-style: none;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-}
-
-.hourly p {
-  margin: 0;
-  padding: 0;
-  width: 50%;
-}
-
 header {
-  max-height: 120px;
   padding: 15px;
   border-bottom: 2px solid;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   box-sizing: content-box;
-}
-
-.menu-burger-checkbox:checked ~ .menu-burger .line-high {
-
-  transform: translate(0px, 14px) rotate(45deg);
-}
-
-.menu-burger-checkbox:checked ~ .menu-burger .line-middle {
-	 opacity: 0;
-}
-
-.menu-burger-checkbox:checked ~ .menu-burger .line-low {
-	transform: translate(0px, -14px) rotate(-45deg);
 }
 
 header .circle {
@@ -113,7 +36,6 @@ header .circle {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 2;
 }
 
 header .circle .line {
@@ -125,38 +47,84 @@ header .circle .line {
   transition: 0.4s;
 }
 
+.menu-burger-checkbox:checked ~ .menu-burger .line-high {
+
+  transform: translate(0px, 14px) rotate(45deg);
+}
+
+.menu-burger-checkbox:checked ~ .menu-burger .line-middle {
+   opacity: 0;
+}
+
+.menu-burger-checkbox:checked ~ .menu-burger .line-low {
+  transform: translate(0px, -14px) rotate(-45deg);
+}
+
 nav {
   width: 100%;
-  height: 100%;
-  position: fixed;
-  background: red;
-  left: 0;
-  top: 100%;
+  height: 0;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-weight: bold;
+  font-size: 23pt;
+  overflow: hidden;
   transition: all ease-in-out 1s 0.1s;
-  z-index: 1;
 }
 
 nav ul {
-  width: 375px;
-  margin: auto;
-  padding: 150px 10px 10px 10px ;
+  padding: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 nav li {
+ width: 100%;
   padding: 40px;
   list-style: none;
   border-bottom: 2px solid;
   text-align: center;
 }
 
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
 .menu-burger-checkbox:checked ~ nav {
-  top: 0;
+  height: 400px;
+}
+
+.border-high  {
+  border-top: 2px solid;
+}
+
+h2 {
+  margin: 40px 0;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 40pt;
+  font-weight: bolder;
+  text-align: center;
+}
+
+p {
+  padding: 0 20px;
+  font-size: 20px;
 }
 
 main {
-  padding: 40px 10px;
+  padding: 0 10px;
+}
+
+main li {
+  width: 100%;
+  min-height: 130px;
+  padding: 20px;
+  border-bottom: 2px solid;
+  list-style: none;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .street-jam-festival,
@@ -169,18 +137,78 @@ main {
   align-items: center;
 }
 
+.btn-more {
+  margin: 20px;
+  padding: 5px 20px;
+  background: white;
+  border-radius: 20px;
+}
+
+.more-content {
+  display: block;
+  height: 20px;
+  overflow: hidden;
+  transition: all 1s;
+  -webkit-mask-image: linear-gradient(#F9E9DE, transparent);
+}
+
 .more-checkbox-street-jam-festival:checked ~ .more-content-street-jam-festival {
-  height: 148px;
+  height: 190px;
   -webkit-mask-image: none;
+}
+
+.container-carousel {
+  overflow: hidden;
+  margin: 80px 0;
+  border-radius: 5px;
+}
+
+.carousel {
+  display: flex;
+  flex-flow: row nowrap;
+  animation: carousel 10s infinite;
+  position: relative;
+}
+
+.tags-graffiti-street-art h2 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tags-graffiti-street-art .titel-left {
+  align-self: flex-start;
+}
+
+.tags-graffiti-street-art .titel-middle {
+  position: relative;
+  right: 30px;
+}
+
+.tags-graffiti-street-art .titel-right {
+  align-self: flex-end;
+}
+
+.hourly {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hours {
+  font-weight: 700;
+}
+
+.hourly p {
+  margin: 0;
+  padding: 0;
+  width: 50%;
 }
 
 .more-checkbox-tags:checked ~ .more-content-tags {
   height: 148px;
-  -webkit-mask-image: none;
-}
-
-.more-checkbox-skate:checked ~ .more-content-skate {
-  height: 1200px;
   -webkit-mask-image: none;
 }
 
@@ -190,11 +218,17 @@ main {
   width: 100%;
 }
 
+.more-checkbox-skate:checked ~ .more-content-skate {
+  height: 1230px;
+  -webkit-mask-image: none;
+}
+
 .street-food ul {
   padding: 0;
 }
 
 .street-food li {
+  min-height: 90px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -204,6 +238,7 @@ main {
 .street-food label {
   text-align: center;
   flex-grow: 1;
+  font-weight: 700;
 }
 
 .street-food .arrow {
@@ -222,7 +257,7 @@ main {
 }
 
 .sub-menu-checkbox-oh-my-b:checked ~ .sub-menu-oh-my-b {
-  height: 120px;
+  height: 140px;
   transition: all 2s;
 }
 
@@ -231,7 +266,7 @@ main {
 }
 
 .sub-menu-checkbox-con-cilantro-wey:checked ~ .sub-menu-con-cilantro-wey {
-  height: 120px;
+  height: 140px;
   transition: all 2s;
 }
 
@@ -240,7 +275,7 @@ main {
 }
 
 .sub-menu-checkbox-frankie-hot-dogs:checked ~ .sub-menu-frankie-hot-dogs {
-  height: 120px;
+  height: 140px;
   transition: all 2s;
 }
 
@@ -249,7 +284,7 @@ main {
 }
 
 .sub-menu-checkbox-poke-paradise:checked ~ .sub-menu-poke-paradise {
-  height: 120px;
+  height: 140px;
   transition: all 2s;
 }
 
@@ -258,7 +293,7 @@ main {
 }
 
 .sub-menu-checkbox-bretagne-ambulante:checked ~ .sub-menu-bretagne-ambulante {
-  height: 120px;
+  height: 160px;
   transition: all 2s;
 }
 
@@ -267,7 +302,7 @@ main {
 }
 
 .sub-menu-checkbox-smoothies-stop:checked ~ .sub-menu-smoothies-stop {
-  height: 120px;
+  height: 160px;
   transition: all 2s;
 }
 
@@ -276,6 +311,7 @@ main {
 }
 
 .container-carousel-text {
+  margin: 40px 0;
   overflow: hidden;
 }
 
@@ -291,9 +327,24 @@ main {
 }
 
 footer {
-  padding: 40px 10px;
+  padding: 40px 10px 10px 10px;
   background: black;
   color: white;
+}
+
+h3 {
+  margin: 30px 0;
+  font-size: 23pt;
+}
+
+footer a {
+  color: white;
+  padding: 20px;
+}
+
+.credit {
+  text-align: center;
+  margin: 80px 0 10px 0;
 }
 
 @keyframes carousel-text {
