--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ header .circle .line {
 }
 
 .menu-burger-checkbox:checked ~ .menu-burger .line-middle {
-   opacity: 0;
+  opacity: 0;
 }
 
 .menu-burger-checkbox:checked ~ .menu-burger .line-low {
@@ -102,7 +102,7 @@ h2 {
   margin: 40px 0;
   font-family: 'Barlow Condensed', sans-serif;
   font-size: 40pt;
-  font-weight: bolder;
+  font-weight: 900;
   text-align: center;
 }
 
@@ -148,7 +148,7 @@ main li {
   display: block;
   height: 20px;
   overflow: hidden;
-  transition: all 1s;
+  transition: height 1s;
   -webkit-mask-image: linear-gradient(#F9E9DE, transparent);
 }
 
@@ -340,11 +340,13 @@ h3 {
 footer a {
   color: white;
   padding: 20px;
+  font-size: 20px;
 }
 
 .credit {
   text-align: center;
-  margin: 80px 0 10px 0;
+  margin: 80px 0 0 0;
+  font-size: 17px;
 }
 
 @keyframes carousel-text {
