css section-musique rectification margin carousel

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,10 @@ main li {
   -webkit-mask-image: none;
 }
 
+.musique .container-carousel {
+  margin-top: 0;
+}
+
 .street-food ul {
   padding: 0;
 }
