--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 body {
   max-width: 375px;
   margin: auto;
-  background: #F9E9DE;
+  background: #ffddbd;
   font-family: 'Montserrat', sans-serif;
 }
 
